<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/image_monowa"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/monowa_logo"
        app:srcCompat="@drawable/mono_main_logo" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cabin"
        android:layout_gravity="center_horizontal"
        android:text="@string/login_title"
        android:textSize="28sp"/>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="@string/login_username_hint"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:fontFamily="@font/cabin"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="16dp"
        android:background="@drawable/btn_rounded"
        android:onClick="logIn"
        android:textColor="#FFFFFF"
        android:text="@string/login_action_login"/>

    <TextView
        android:id="@+id/text_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/login_action_forgot"
        android:textAlignment="center"
        android:paddingHorizontal="4dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#8F8EAD"
        android:textSize="15sp"/>
</LinearLayout>