<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image_monowa"
        android:layout_width="300dp"
        android:layout_marginTop="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/mono_main_logo"
        android:contentDescription="@string/monowa_logo"/>

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/cabin"
        android:text="@string/dashboard_welcome"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#1A1F2F"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/text_monowa"
        android:layout_width="wrap_content"
        android:gravity="top"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#1A1F2F"
        android:textSize="30sp"/>

    <TextView
        android:id="@+id/text_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8sp"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/dashboard_description"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#8F8EAD"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/button_start"
        android:layout_width="300sp"
        android:onClick="goToLogIn"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginVertical="16dp"
        android:background="@drawable/btn_rounded"
        android:fontFamily="@font/cabin_medium"
        android:text="@string/dashboard_action_sign_up"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/cabin_medium"
            android:paddingHorizontal="4dp"
            android:text="@string/dashboard_msg_account"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#8F8EAD"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:fontFamily="@font/cabin_medium"
            android:text="@string/dashboard_action_login"
            android:textAlignment="center"
            android:onClick="goToSignUp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="#7865E3"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>