<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/image_monowa"
        android:layout_width="300dp"
        android:layout_marginTop="100dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        app:srcCompat="@drawable/mono_main_logo"
        android:contentDescription="@string/monowa_logo"/>

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/cabin"
        android:text="@string/signup_title"
        android:textSize="28sp" />

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="@string/signup_username_hint"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:layout_marginVertical="8dp"
        android:fontFamily="@font/cabin"
        android:hint="@string/signup_password_hint"
        android:inputType="textPassword"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:layout_gravity="center_horizontal"
        android:ems="10"
        android:fontFamily="@font/cabin"
        android:hint="@string/signup_email_hint"
        android:autofillHints=""
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="150dp"
        android:fontFamily="@font/cabin"
        android:layout_gravity="center_horizontal"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:onClick="goToSignIn"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:background="@drawable/btn_rounded"
        android:textColor="#FFFFFF"
        android:text="@string/signup_action_signup"/>

    <!--<ImageView
        android:id="@+id/imageView3"
        android:layout_width="217dp"
        android:layout_height="168dp"
        android:layout_marginStart="97dp"
        android:layout_marginLeft="97dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="97dp"
        android:layout_marginRight="97dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="147dp"
        android:layout_height="49dp"
        android:layout_marginStart="134dp"
        android:layout_marginLeft="134dp"
        android:layout_marginTop="227dp"
        android:layout_marginEnd="132dp"
        android:layout_marginRight="132dp"
        android:fontFamily="@font/cabin"
        android:text="monowa"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="270dp"
        android:layout_marginBottom="44dp"
        android:text="Usuario"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="113dp"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="380dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="270dp"
        android:layout_marginBottom="327dp"
        android:text="Contraseña"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="113dp"
        android:layout_height="24dp"

        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginTop="448dp"
        android:layout_marginEnd="270dp"
        android:layout_marginRight="270dp"
        android:layout_marginBottom="259dp"
        android:text="@string/email"
        android:textAlignment="viewEnd"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/newUser"
        android:layout_width="219dp"
        android:layout_height="46dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="22dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/someuser"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"

        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/newPass"
        android:layout_width="219dp"
        android:layout_height="46dp"
        android:layout_marginStart="152dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="368dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"

        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <EditText
        android:id="@+id/newEmail"
        android:layout_width="219dp"
        android:layout_height="46dp"
        android:layout_marginStart="11dp"

        android:layout_marginLeft="11dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="249dp"
        android:autofillHints=""
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/example_email_mx"
        android:inputType="textEmailAddress"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF" />

    <Button
        android:id="@+id/register"
        android:layout_width="121dp"
        android:layout_height="0dp"
        android:layout_marginStart="146dp"
        android:layout_marginLeft="146dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_marginBottom="156dp"
        android:background="@drawable/btn_rounded"
        android:onClick="goToSignIn"
        android:text="@string/register"
        android:textColor="#267ff5"
        android:textColorHighlight="#FFFFFF" />-->
</LinearLayout>